[project]
name = "deepkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">3.10,<3.13.1"
dependencies = [
    "flax>=0.10.5",
    "ipykernel>=6.29.5",
    "jax>=0.5.3",
    "seaborn>=0.13.2",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
