[project]
name = "deepkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">3.11,<3.13.1"
dependencies = [
    "flax==0.12.2",
    "ipykernel>=6.29.5",
    "jax==0.8.1",
    "seaborn>=0.13.2",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
